--- a/setup.yaml
+++ b/setup.yaml
@@ -392,7 +392,7 @@
       block:
         - name: Add Docker repository
           ansible.builtin.deb822_repository:
-              name: gnupg2
+              name: docker
               types: deb
               uris: "https://download.docker.com/linux/debian"
               suites: "{{ ansible_distribution_release | mandatory }}"
