Never mark an upstream server as down (because we only have one option and it should always be retried)

--- a/nginx/templates/default.conf.template
+++ b/nginx/templates/default.conf.template
@@ -40,23 +40,23 @@ map $http_upgrade $connection_upgrade {
 }
 
 upstream production {
-  server host.docker.internal:${PRODUCTION_HTTP_PORT};
+  server host.docker.internal:${PRODUCTION_HTTP_PORT} max_fails=0;
 }
 
 upstream staging {
-  server host.docker.internal:${STAGING_HTTP_PORT};
+  server host.docker.internal:${STAGING_HTTP_PORT} max_fails=0;
 }
 
 upstream monitor {
-  server host.docker.internal:${MONITOR_HTTP_PORT};
+  server host.docker.internal:${MONITOR_HTTP_PORT} max_fails=0;
 }
 
 upstream logs {
-  server host.docker.internal:${LOGS_HTTP_PORT};
+  server host.docker.internal:${LOGS_HTTP_PORT} max_fails=0;
 }
 
 upstream metrics {
-  server host.docker.internal:${METRICS_HTTP_PORT};
+  server host.docker.internal:${METRICS_HTTP_PORT} max_fails=0;
 }
 
 server {
